# fiver-gig-analyzer

./: README.md
backend/: .env  .gitignore  main.py  parser.py  pyproject.toml
backend/ai/: analyzer.py
backend/entity/: __init__.py  authentication.py  data.py  user.py
backend/instructions/: DESCRIPTION_GUIDLINE.md  FACT.md  OUTPUT.md  ROLE.md  RULES.md  TAG_GUIDELINE.md  TITLE_GUIDELINE.md  VALIDATION_GUIDLINE.md  category_guidelines.md  description_guidelines.md  diagnos_prompt.md  package_pricing_guidelines.md  profile_guidelines.md  request1.md  request2.md  request3.md  rewrite_prompt.md  scoring_rubric.md  tags_guidelines.md  title_guidelines.md  validation_guidelines.md  workflow.md
backend/routes/: main.py
backend/services/: database.py  jwt_token.py
extension/: api.js  background.js  index.css  index.html  index.js  manifest.json  package-lock.json  package.json
extension/src/: gig.js  scrapper.js
frontend/: data2.json  index.html  package-lock.json  package.json  vite.config.js
frontend/context/: NotificationContext.jsx  NotiificationProvider.jsx
frontend/src/: App.jsx  data.json  index.css  main.jsx
frontend/src/components/: Analysis.jsx  BackendNotification.jsx  CTA.jsx  Faq.jsx  Footer.jsx  HeroSection.jsx  HowItWorks.jsx  Login.jsx  Navbar.jsx  ProblemSection.jsx  WhyGigBro.jsx  analyzer.jsx  ediitor.jsx  login.jsx  signup.jsx
frontend/src/layouts/: auth.jsx
frontend/src/pages/: Dashboard.jsx  LandingPage.jsx
frontend/src/service/: auth.jsx
frontend/src/utils/: Notification.jsx
