[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "shamrozkhan0",email = "youngscorporations0319@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "selenium (>=4.44.0,<5.0.0)",
    "webdriver-manager (>=4.1.2,<5.0.0)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pymysql (>=1.2.0,<2.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
